# ennibot

./: .gitignore  CMakeLists.txt  commands.c  commands.h  economy.h  embeds.c  embeds.h  ennibot.c  makefile  readme.md  utils_ennibot.c  utils_ennibot.h  wrappers.c  wrappers.h
core/: concord-notifier.c  io_poller.c  logmod.h  queriec.c  threadpool.c  user-agent.c  websockets.c  websockets.h
embed_files/: emaker.c  makefile
include/: discord-events.h  discord.h  stage_instance.h  sticker.h
reflect-c/: Makefile  README.md  reflect-c.c  reflect-c.h  reflect-c.mk  reflect-c_EXPAND.h  reflect-c_RECIPES_SYMBOLS.h  reflect-c_TUPLE.h
reflect-c/docs/: recipe-format.md  runtime-api.md
reflect-c/recipes/definitions/: main.h
reflect-c/recipes/wrapper/: main.h
reflect-c/test/: runtime.c
reflect-c/test/api/: bar.recipe.h  foo.recipe.h  tuna.recipe.h
src/: CMakeLists.txt  economy.h  embeds.c  ennibot.c  makefile  utils_ennibot.c  utils_ennibot.h  wrappers.c  wrappers.h
